<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.PeopleInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/background_grey"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarTitleTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:title="@string/title_personal_info"
            app:titleTextColor="@color/white" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/root_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:orientation="vertical">

                <ch.epfl.people.widget.CircleImageView
                    android:id="@+id/iv_image"
                    android:layout_width="@dimen/view_image_size_people_info"
                    android:layout_height="@dimen/view_image_size_people_info"
                    android:layout_gravity="center" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_name"
                    style="@style/MediumText.ExtraLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/dummy_small_text"
                    android:textAlignment="center" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_position"
                    style="@style/RegularText.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    android:text="@string/dummy_small_text"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_large">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_linkedin"
                        android:layout_width="@dimen/extra_large_icon_size"
                        android:layout_height="@dimen/extra_large_icon_size"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:src="@drawable/ic_linkedin" />


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_twitter"
                        android:layout_width="@dimen/extra_large_icon_size"
                        android:layout_height="@dimen/extra_large_icon_size"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:src="@drawable/ic_twitter" />


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_website"
                        android:layout_width="@dimen/extra_large_icon_size"
                        android:layout_height="@dimen/extra_large_icon_size"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:padding="@dimen/margin_extra_small"
                        android:src="@drawable/ic_blogger" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/RegularText.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_email"
                        android:textColor="@color/hint_text_color" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_email"
                        style="@style/RegularText.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_extra_small"
                        android:text="@string/lbl_email" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/RegularText.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_contact_number"
                        android:textColor="@color/hint_text_color" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_contact_number"
                        style="@style/RegularText.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_extra_small"
                        android:text="@string/lbl_email" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_citizenship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/RegularText.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_citizenship"
                        android:textColor="@color/hint_text_color" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_citizenship"
                        style="@style/RegularText.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_extra_small"
                        android:text="@string/lbl_email" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_field_of_expertise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/RegularText.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_field_of_expertise"
                        android:textColor="@color/hint_text_color" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_field_of_expertise"
                        style="@style/RegularText.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_extra_small"
                        android:text="@string/lbl_email" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_biography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/RegularText.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_biography"
                        android:textColor="@color/hint_text_color" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_biography"
                        style="@style/RegularText.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_extra_small"
                        android:text="@string/lbl_email" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_mission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/RegularText.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_mission"
                        android:textColor="@color/hint_text_color" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_mission"
                        style="@style/RegularText.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_extra_small"
                        android:text="@string/lbl_email" />

                </LinearLayout>
            </LinearLayout>


        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


    <include
        android:id="@+id/layout_progress_bar"
        layout="@layout/layout_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>